Add intermediate CSS files

--- a/Introduction to CSS/css/style.css
+++ b/Introduction to CSS/css/style.css
@@ -11,6 +11,10 @@ img {
 }
  */
 
+img {
+    position: relative;
+    left: 30px;
+}
 
 /***************************Pseudo Class***************************/
 img:hover {
