--- a/CSS-My Site/css/styles.css
+++ b/CSS-My Site/css/styles.css
@@ -1,27 +1,51 @@
 body{
     margin: 0;
+    text-align: center;
+    font-family: 'Merriweather', serif;
+    font-size: 40px;
 }
 
 h1{
-    margin-top: 0;
+    font-size: 5.625rem;
+    margin-top: 50px;
+    font-family: 'Sacramento', cursive;
+}
+
+h2 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
+}
+
+h3 {
+    font-family: 'Montserrat', sans-serif;
 }
 
 .top-container {
     background-color: #E4F9F5;
+    position: relative;
+    padding-top: 100px;
 }
 
 .middle-container {
-    background-color: red;
-    width: 200px;
-    height: 200px;
+
 }
 
 .bottom-container {
-    background-color: blue;
-    width: 200px;
-    height: 200px;
+
 }
 
 .pro {
     text-decoration: underline;
+}
+
+.top-cloud {
+    position: absolute;
+    right: 300px;
+    top: 50px;
+}
+
+.bottom-cloud {
+    position: absolute;
+    left: 300px;
+    bottom: 300px;
 }
