--- a/jQuery/styles.css
+++ b/jQuery/styles.css
@@ -1,3 +1,13 @@
 body {
 
 }
+
+.big-title {
+    font-size: 10rem;
+    color: yellow;
+    font-family: cursive;
+}
+
+.margin-50 {
+    margin: 50px;
+}
